feat: token validation
