# src/routes/API/v1/reports/+server.js
@@ -1,6 +1,7 @@
 import mongoose from 'mongoose';
 import jwt from "jsonwebtoken";
 import { json } from '@sveltejs/kit';
+import { validateToken } from '$lib/utils/auth';
 
 const JWT_SECRET = 'a_secret_key';
 
@@ -19,18 +20,25 @@ const reportSchema = new mongoose.Schema({
 const Report = mongoose.models.Report || mongoose.model('Report', reportSchema);
 
 export async function POST({ request }) {
+    const { valid, payload, error } = validateToken(request);
+
+    if (!valid) {
+        return new Response(JSON.stringify({ error }), { status: 401 });
+    }
+
     try {
         const data = await request.json();
-        const { line, time, crowdedness } = data;
+        let { line, time, crowdedness } = data;
+        time = new Date(time).getTime();
 
-        if (!line || typeof time !== 'number' || !['low', 'medium', 'high'].includes(crowdedness)) {
+        if (!line || typeof time !== 'number' || !['almost_empty', 'empty_seats', 'seats_full', 'crowded', 'overcrowded'].includes(crowdedness)) {
             return json({ error: 'Invalid data' }, { status: 400 });
         }
 
-
         const report = new Report({ line, time, crowdedness });
+  
         await report.save();
-
+    
         return json({ message: 'Report saved successfully' }, { status: 201 });
     } catch (err) {
         console.error('Error saving report:', err);
@@ -38,7 +46,13 @@ export async function POST({ request }) {
     }
 }
 
-export async function GET() {
+export async function GET({request}) {
+    const { valid, payload, error } = validateToken(request);
+
+    if (!valid) {
+        return new Response(JSON.stringify({ error }), { status: 401 });
+    }
+
     try {
         const reports = await Report.find().sort({ time: -1 }).lean();
         return json(reports, { status: 200 });
